# py3d

./: pyproject.toml
data/: cube1.mtl
py3d/: camera.py  main.py  mesh.py  scene.py
tests/: test_py3d.py
